--- a/templates/frontend/events/container.html.twig
+++ b/templates/frontend/events/container.html.twig
@@ -269,7 +269,7 @@
                                 </div>
                             </div>
                             <div class="footer">
-                                <div class="rating">Für die Dauer der Rollstuhlüberprüfung stehen Ihnen die neuesten Modelle von Aktivrollstühlen der Firma Otto Bock zum Testen zur Verfügung.</div>
+                                <div class="rating">F&uuml;r die Dauer der Rollstuhl&uuml;berpr&uuml;fung stehen Ihnen die neuesten Modelle von Aktivrollst&uuml;hlen der Firma Otto Bock zum Testen zur Verf&uuml;gung.</div>
                             </div>
                         </div>
 
