--- a/templates/frontend/start/athlon.rollator.html.twig
+++ b/templates/frontend/start/athlon.rollator.html.twig
@@ -25,7 +25,7 @@
     </div>
     <div class="col-12 col-md-7">
         <h2 class="featurette-heading">Rollator Athlon SL</h2>
-        <p class="lead">Der superleichte Carbon-Rollator bietet Ihnen alles, was Ihr mobiler Alltag benötigt - Stabilität und Sicherheit beim Gehen inkl. zuverlässigen Bremsen mit bruchfesten Rädern.</p>
+        <p class="lead">Der superleichte Carbon-Rollator bietet Ihnen alles, was Ihr mobiler Alltag ben&ouml;tigt - Stabilit&auml;t und Sicherheit beim Gehen inkl. zuverl&auml;ssigen Bremsen mit bruchfesten R&auml;dern.</p>
         <p class="d-md-none">
             <button class="btn btn-link-red" data-toggle="collapse" data-target="#athlon-delivery">Lieferumfang <i class="fas fa-caret-down"></i> </button>
             <button class="btn btn-link-red" data-toggle="collapse" data-target="#athlon-technical">Technische Details <i class="fas fa-caret-down"></i> </button>
