--- a/templates/frontend/start/avantgarde.rollstuhl.html.twig
+++ b/templates/frontend/start/avantgarde.rollstuhl.html.twig
@@ -28,14 +28,14 @@
                     <li>HMV-Nummer 18.50.03.0224</li>
                     <li>Sitzbreite 320 - 500 mm</li>
                     <li>Sitztiefe 360 - 520 mm</li>
-                    <li>Sitzhöhe vorn 390 - 550 mm</li>
-                    <li>Sitzhöhe hinten 360 - 510 mm</li>
-                    <li>Rückenhöhe 250 - 500 mm</li>
-                    <li>Unterschenkellänge 	160 - 510 mm</li>
-                    <li>Gesamtlänge 720 - 1040 mm</li>
+                    <li>Sitzh&ouml;he vorn 390 - 550 mm</li>
+                    <li>Sitzh&ouml;he hinten 360 - 510 mm</li>
+                    <li>R&uuml;ckenh&ouml;he 250 - 500 mm</li>
+                    <li>Unterschenkell&auml;nge 	160 - 510 mm</li>
+                    <li>Gesamtl&auml;nge 720 - 1040 mm</li>
                     <li>Gesamtbreite 490 - 725 mm</li>
-                    <li>Gesamthöhe 	580 - 1100 mm</li>
-                    <li>Faltmaß ab 260 mm</li>
+                    <li>Gesamth&ouml;he 	580 - 1100 mm</li>
+                    <li>Faltma&szlig; ab 260 mm</li>
                     <li>Max. Zuladung 100 / 140 kg</li>
                     <li>Gewicht ab ca. 9 kg</li>
                 </ul>
@@ -44,7 +44,7 @@
     </div>
     <div class="col-12 col-md-7">
         <h2 class="featurette-heading">Ottobock Avantgarde DV</h2>
-        <p class="lead">Der Avantgarde DV steht für Leichtigkeit – ohne Kompromisse! Denn auf bewährte Vorteile der Avantgard-Serie von Otto Bock, wie etwa abnehm- und wegschwenkbare Beinstützen, muss man nicht verzichten.</p>
+        <p class="lead">Der Avantgarde DV steht f&uuml;r Leichtigkeit – ohne Kompromisse! Denn auf bew&auml;hrte Vorteile der Avantgard-Serie von Otto Bock, wie etwa abnehm- und wegschwenkbare Beinst&uuml;tzen, muss man nicht verzichten.</p>
         <nav>
             <div class="nav nav-tabs" id="nav-tab" role="tablist">
                 <a class="nav-item nav-link active" id="nav-general-tab" data-toggle="tab" href="#nav-general" role="tab" aria-controls="nav-general" aria-selected="true" title="Hauptmerkmale"><i class="fas fa-home"></i> <span class="">Hauptmerkmale</span> </a>
@@ -56,26 +56,26 @@
             <div class="tab-pane fade show active" id="nav-general" role="tabpanel" aria-labelledby="nav-general-tab">
                 <ul class="py-4">
                     <li>Hohe Anzahl Antriebsradpositionen</li>
-                    <li>Nach innen und außen schwenkbare, abnehmbare Fußrastenhalter</li>
-                    <li>Variabilität durch eine Vielzahl an Optionen</li>
-                    <li>Minimierte Verwindungskräfte im Rahmen</li>
-                    <li>Schwenksegment über Hebel leicht auslösbar</li>
+                    <li>Nach innen und au&szlig;en schwenkbare, abnehmbare Fu&szlig;rastenhalter</li>
+                    <li>Variabilit&auml;t durch eine Vielzahl an Optionen</li>
+                    <li>Minimierte Verwindungskr&auml;fte im Rahmen</li>
+                    <li>Schwenksegment &uuml;ber Hebel leicht ausl&ouml;sbar</li>
                 </ul>
             </div>
             <div class="tab-pane fade" id="nav-options" role="tabpanel" aria-labelledby="nav-options-tab">
                 <ul class="py-4">
-                    <li>Fest verschweißte Antriebsradposition und auf Maß gebogene Rückenrohre</li>
+                    <li>Fest verschwei&szlig;te Antriebsradposition und auf Ma&szlig; gebogene R&uuml;ckenrohre</li>
                     <li>CLT-Kreuzstebe (-300 g)</li>
                     <li>Seitenteile aus Carbon</li>
-                    <li>Verschiedene Rückenbespannungen</li>
+                    <li>Verschiedene R&uuml;ckenbespannungen</li>
                     <li>Verschiedene Schiebegriffe</li>
                     <li>Verschiedene Seitenteile</li>
                     <li>Verschiedene Antriebsradfelgen</li>
                     <li>Verschiedene Greifreifen</li>
-                    <li>Radstandsverlängerung inkl. Bremsadapter</li>
+                    <li>Radstandsverl&auml;ngerung inkl. Bremsadapter</li>
                     <li>Scherenbremse</li>
                     <li>Shock Absorber</li>
-                    <li>Verschiedene Lenkräder / Lenkradgabeln</li>
+                    <li>Verschiedene Lenkr&auml;der / Lenkradgabeln</li>
                     <li>Kippschutz</li>
                     <li>Ankipphilfe</li>
                 </ul>
@@ -85,14 +85,14 @@
                     <li>HMV-Nummer 18.50.03.0224</li>
                     <li>Sitzbreite 320 - 500 mm</li>
                     <li>Sitztiefe 360 - 520 mm</li>
-                    <li>Sitzhöhe vorn 390 - 550 mm</li>
-                    <li>Sitzhöhe hinten 360 - 510 mm</li>
-                    <li>Rückenhöhe 250 - 500 mm</li>
-                    <li>Unterschenkellänge 	160 - 510 mm</li>
-                    <li>Gesamtlänge 720 - 1040 mm</li>
+                    <li>Sitzh&ouml;he vorn 390 - 550 mm</li>
+                    <li>Sitzh&ouml;he hinten 360 - 510 mm</li>
+                    <li>R&uuml;ckenh&ouml;he 250 - 500 mm</li>
+                    <li>Unterschenkell&auml;nge 	160 - 510 mm</li>
+                    <li>Gesamtl&auml;nge 720 - 1040 mm</li>
                     <li>Gesamtbreite 490 - 725 mm</li>
-                    <li>Gesamthöhe 	580 - 1100 mm</li>
-                    <li>Faltmaß ab 260 mm</li>
+                    <li>Gesamth&ouml;he 	580 - 1100 mm</li>
+                    <li>Faltma&szlig; ab 260 mm</li>
                     <li>Max. Zuladung 100 / 140 kg</li>
                     <li>Gewicht ab ca. 9 kg</li>
                 </ul>
