--- a/templates/frontend/start/carousel.html.twig
+++ b/templates/frontend/start/carousel.html.twig
@@ -16,7 +16,7 @@
             </div>
         </div>
         <div class="carousel-item">
-            <img src="K+C_2019_Läuft.jpg">
+            <img src="K+C_2019_L&auml;uft.jpg">
             <div class="container">
                 <div class="carousel-caption">
                     <h1>Another example headline.</h1>
