--- a/templates/frontend/start/colibri.scooter.html.twig
+++ b/templates/frontend/start/colibri.scooter.html.twig
@@ -30,8 +30,8 @@
                     <li>Geschwindigkeit 6 km/h</li>
                     <li>Gewicht 44 kg</li>
                     <li>Sitztiefe 40 cm</li>
-                    <li>Sitzhöhe 37-42 cm</li>
-                    <li>Rückenlehne 38,5 cm</li>
+                    <li>Sitzh&ouml;he 37-42 cm</li>
+                    <li>R&uuml;ckenlehne 38,5 cm</li>
                     <li>Gesamtbreite 50,5 cm</li>
                     <li>Motorleistung 200 W</li>
                 </ul>
@@ -41,9 +41,9 @@
     <div class="col-12 col-md-7">
         <h2 class="featurette-heading">ELEKTROMOBIL COLIBRI<sup>&reg;</sup></h2>
         <p class="lead">Das Elektromobil Colibri&reg; von Invacare ist besonders
-            wendig und im Handumdrehen ohne Werkzeug für den
+            wendig und im Handumdrehen ohne Werkzeug f&uuml;r den
             Transport in Ihrem Auto zerlegbar. Verschiedene Farbvarianten
-            sind auswählbar.</p>
+            sind ausw&auml;hlbar.</p>
         <p class="d-md-none">
             <button class="btn btn-link-red" data-toggle="collapse" data-target="#colibri-content">Ausstattung <i class="fas fa-caret-down"> </i> </button>
             <button class="btn btn-link-red" data-toggle="collapse" data-target="#colibri-technical">Technische Details <i class="fas fa-caret-down"> </i> </button>
@@ -56,7 +56,7 @@
             <ul class="collapse" id="colibri-content">
                 <li>Ladestandsanzeige</li>
                 <li>Bequemer Sitz</li>
-                <li>Batterieladegerät</li>
+                <li>Batterieladeger&auml;t</li>
                 <li>Inkl. Einkaufskorb vorn</li>
             </ul>
             <ul class="collapse d-md-inline-block" id="colibri-technical">
@@ -65,8 +65,8 @@
                 <li>Geschwindigkeit 6 km/h</li>
                 <li>Gewicht 44 kg</li>
                 <li>Sitztiefe 40 cm</li>
-                <li>Sitzhöhe 37-42 cm</li>
-                <li>Rückenlehne 38,5 cm</li>
+                <li>Sitzh&ouml;he 37-42 cm</li>
+                <li>R&uuml;ckenlehne 38,5 cm</li>
                 <li>Gesamtbreite 50,5 cm</li>
                 <li>Motorleistung 200 W</li>
             </ul>
