--- a/templates/frontend/start/comet.scooter.html.twig
+++ b/templates/frontend/start/comet.scooter.html.twig
@@ -31,8 +31,8 @@
                     <li>Gewicht 63-136 kg</li>
                     <li>Sitzbreite 51 cm</li>
                     <li>Sitztiefe 47 cm</li>
-                    <li>Sitzhöhe 44-51 cm</li>
-                    <li>Rückenlehne 49 cm</li>
+                    <li>Sitzh&ouml;he 44-51 cm</li>
+                    <li>R&uuml;ckenlehne 49 cm</li>
                     <li>Gesamtbreite 68,5 cm</li>
                     <li>Motorleistung ab 550 W</li>
                 </ul>
@@ -41,22 +41,22 @@
     </div>
     <div class="col-12 col-md-7">
         <h2 class="featurette-heading">ELEKTROMOBIL COMET<sup>&reg;</sup></h2>
-        <p class="lead">Das leistungsstarke Elektromobil ist sowohl für die
-            Stadt als auch für den Ausflug in die Natur geeignet.</p>
+        <p class="lead">Das leistungsstarke Elektromobil ist sowohl f&uuml;r die
+            Stadt als auch f&uuml;r den Ausflug in die Natur geeignet.</p>
         <p class="d-md-none">
             <button class="btn btn-link-red" data-toggle="collapse" data-target="#comet-content">Ausstattung <i class="fas fa-caret-down"> </i> </button>
             <button class="btn btn-link-red" data-toggle="collapse" data-target="#comet-technical">Technische Details <i class="fas fa-caret-down"> </i> </button>
         </p>
         <div class="d-none d-md-flex justify-content-start">
-            <p class="lead text-red"><strong>Serienmäßige Ausstattung:</strong></p>
+            <p class="lead text-red"><strong>Serienm&auml;&szlig;ige Ausstattung:</strong></p>
         </div>
         <div class="d-md-inline-block justify-content-start">
             <ul class="collapse" id="comet-content">
-                <li>Premium-Rückspiegel für links und rechts</li>
+                <li>Premium-R&uuml;ckspiegel f&uuml;r links und rechts</li>
                 <li>Easy-Drive Funktion</li>
                 <li>Doppelscheinwerfer</li>
                 <li>Bremshebel und -licht</li>
-                <li>Ladegerät</li>
+                <li>Ladeger&auml;t</li>
                 <li>Hupe</li>
                 <li>Kurvendrosselung </li>
                 <li>Innovative Federung</li>
@@ -68,8 +68,8 @@
                 <li>Gewicht 63-136 kg</li>
                 <li>Sitzbreite 51 cm</li>
                 <li>Sitztiefe 47 cm</li>
-                <li>Sitzhöhe 44-51 cm</li>
-                <li>Rückenlehne 49 cm</li>
+                <li>Sitzh&ouml;he 44-51 cm</li>
+                <li>R&uuml;ckenlehne 49 cm</li>
                 <li>Gesamtbreite 68,5 cm</li>
                 <li>Motorleistung ab 550 W</li>
             </ul>
