--- a/templates/frontend/start/leo.scooter.html.twig
+++ b/templates/frontend/start/leo.scooter.html.twig
@@ -31,8 +31,8 @@
                     <li>Gewicht 83 kg</li>
                     <li>Sitzbreite 47 cm</li>
                     <li>Sitztiefe 41 cm</li>
-                    <li>Sitzhöhe 46-56 cm</li>
-                    <li>Rückenlehne 47,5 cm</li>
+                    <li>Sitzh&ouml;he 46-56 cm</li>
+                    <li>R&uuml;ckenlehne 47,5 cm</li>
                     <li>Gesamtbreite 66 cm</li>
                     <li>Motorleistung 240 W</li>
                 </ul>
@@ -41,24 +41,24 @@
     </div>
     <div class="col-12 col-md-7">
         <h2 class="featurette-heading">ELEKTROMOBIL LEO<sup>&reg;</sup></h2>
-        <p class="lead">Der Invacare® Leo® erfüllt mit ÖPNV-Sonderausstattung
-            sämtliche Anforderungen für die Mitnahme in öffentlichen
+        <p class="lead">Der Invacare® Leo® erf&uuml;llt mit &Ouml;PNV-Sonderausstattung
+            s&auml;mtliche Anforderungen f&uuml;r die Mitnahme in &ouml;ffentlichen
             Verkehrsmitteln.</p>
         <p class="d-md-none">
             <button class="btn btn-link-red" data-toggle="collapse" data-target="#leo-content">Ausstattung <i class="fas fa-caret-down"> </i> </button>
             <button class="btn btn-link-red" data-toggle="collapse" data-target="#leo-technical">Technische Details <i class="fas fa-caret-down"> </i> </button>
         </p>
         <div class="d-none d-md-flex justify-content-start">
-            <p class="lead text-red"><strong>Serienmäßige Ausstattung:</strong></p>
+            <p class="lead text-red"><strong>Serienm&auml;&szlig;ige Ausstattung:</strong></p>
         </div>
         <div class="d-md-inline-block justify-content-start">
             <ul class="collapse" id="leo-content">
                 <li>Doppelscheinwerfer</li>
                 <li>Brems- / Blinklicht</li>
-                <li>Rückspiegel links</li>
+                <li>R&uuml;ckspiegel links</li>
                 <li>Sitz (Lederoptik drehbar)</li>
                 <li>Sitz- und Armlehnen individuell einstellbar</li>
-                <li>Batterieladegerät</li>
+                <li>Batterieladeger&auml;t</li>
                 <li>Einkaufskorb vorn</li>
             </ul>
             <ul class="collapse d-md-inline-block" id="leo-technical">
@@ -68,8 +68,8 @@
                 <li>Gewicht 83 kg</li>
                 <li>Sitzbreite 47 cm</li>
                 <li>Sitztiefe 41 cm</li>
-                <li>Sitzhöhe 46-56 cm</li>
-                <li>Rückenlehne 47,5 cm</li>
+                <li>Sitzh&ouml;he 46-56 cm</li>
+                <li>R&uuml;ckenlehne 47,5 cm</li>
                 <li>Gesamtbreite 66 cm</li>
                 <li>Motorleistung 240 W</li>
             </ul>
