--- a/templates/frontend/start/motus.rollstuhl.html.twig
+++ b/templates/frontend/start/motus.rollstuhl.html.twig
@@ -26,59 +26,59 @@
                 <span class="post">Technische Daten:</span>
                 <ul>
                     <li>Rahmenmaterial 	Aluminium</li>
-                    <li>Produktgewicht 	ab 12 kg (abhängig von Optionen)</li>
-                    <li>Schwerpunktverstellung 	48 Positionen über Antriebsradadapter einstellbar</li>
+                    <li>Produktgewicht 	ab 12 kg (abh&auml;ngig von Optionen)</li>
+                    <li>Schwerpunktverstellung 	48 Positionen &uuml;ber Antriebsradadapter einstellbar</li>
                     <li>Max. Benutzergewicht</li>
                     <ul>
                         <li>125 kg (bis SB 480 mm)</li>
                         <li>140 kg (ab SB 505 mm)</li>
                     </ul>
                     </li>
-                    <li>Rückenhöhe 	300–500 mm</li>
+                    <li>R&uuml;ckenh&ouml;he 	300–500 mm</li>
                     <li>Sitzbreite 	355–555 mm</li>
                     <li>Sitztiefe 	360–540 mm</li>
-                    <li>Unterschenkellänge 	340–520 mm</li>
+                    <li>Unterschenkell&auml;nge 	340–520 mm</li>
                     <li>Breite
                         <ul>
                             <li>Antriebsrad mit Kniehebelbremse 520–720 mm</li>
                             <li>Antriebsrad mit Trommelbremse 555–755 mm</li>
                         </ul>
                     </li>
-                    <li>Länge 	805–1110 mm</li>
+                    <li>L&auml;nge 	805–1110 mm</li>
                 </ul>
             </div>
         </div>
     </div>
     <div class="col-12 col-md-7">
         <h2 class="featurette-heading">Ottobock Motus</h2>
-        <p class="lead">Der Motus ist ein Adaptivrollstuhl, der sich Ihren individuellen Bedürfnissen entsprechend einstellen lässt.
-            Die schwenkbaren Fußrasten und die höhenverstellbare Rückenlehne lassen sich schnell verstellen und sorgen so für bequemeres Sitzen (Motus CV).
-            Optional erhalten Sie Ihren Motus mit kompaktem, festem Vorderrahmen und durchgehender Fußraste aus Aluminium (Motus CS).
-            Übrigens: Transport und Lagerung kann der Motus schnell zusammengelegt werden , das spart Zeit und Energie.</p>
+        <p class="lead">Der Motus ist ein Adaptivrollstuhl, der sich Ihren individuellen Bed&uuml;rfnissen entsprechend einstellen l&auml;sst.
+            Die schwenkbaren Fu&szlig;rasten und die h&ouml;henverstellbare R&uuml;ckenlehne lassen sich schnell verstellen und sorgen so f&uuml;r bequemeres Sitzen (Motus CV).
+            Optional erhalten Sie Ihren Motus mit kompaktem, festem Vorderrahmen und durchgehender Fu&szlig;raste aus Aluminium (Motus CS).
+            &Uuml;brigens: Transport und Lagerung kann der Motus schnell zusammengelegt werden , das spart Zeit und Energie.</p>
         <p class="d-md-none">
             <button class="btn btn-link-red" data-toggle="collapse" data-target="#motus-technical">Technische Details <i class="fas fa-caret-down"></i> </button>
         </p>
         <ul class="collapse d-md-inline-block" id="motus-technical">
             <li>Rahmenmaterial 	Aluminium</li>
-            <li>Produktgewicht 	ab 12 kg (abhängig von Optionen)</li>
-            <li>Schwerpunktverstellung 	48 Positionen über Antriebsradadapter einstellbar</li>
+            <li>Produktgewicht 	ab 12 kg (abh&auml;ngig von Optionen)</li>
+            <li>Schwerpunktverstellung 	48 Positionen &uuml;ber Antriebsradadapter einstellbar</li>
             <li>Max. Benutzergewicht</li>
             <ul>
                 <li>125 kg (bis SB 480 mm)</li>
                 <li>140 kg (ab SB 505 mm)</li>
             </ul>
             </li>
-            <li>Rückenhöhe 	300–500 mm</li>
+            <li>R&uuml;ckenh&ouml;he 	300–500 mm</li>
             <li>Sitzbreite 	355–555 mm</li>
             <li>Sitztiefe 	360–540 mm</li>
-            <li>Unterschenkellänge 	340–520 mm</li>
+            <li>Unterschenkell&auml;nge 	340–520 mm</li>
             <li>Breite
                 <ul>
                     <li>Antriebsrad mit Kniehebelbremse 520–720 mm</li>
                     <li>Antriebsrad mit Trommelbremse 555–755 mm</li>
                 </ul>
             </li>
-            <li>Länge 	805–1110 mm</li>
+            <li>L&auml;nge 	805–1110 mm</li>
         </ul>
     </div>
 </div>
