--- a/templates/frontend/start/orion.scooter.html.twig
+++ b/templates/frontend/start/orion.scooter.html.twig
@@ -31,8 +31,8 @@
                     <li>Gewicht 110 kg</li>
                     <li>Sitzbreite 51 cm</li>
                     <li>Sitztiefe 47 cm</li>
-                    <li>Sitzhöhe 44-51 cm</li>
-                    <li>Rückenlehne 50 cm</li>
+                    <li>Sitzh&ouml;he 44-51 cm</li>
+                    <li>R&uuml;ckenlehne 50 cm</li>
                     <li>Wenderadius 260 cm</li>
                 </ul>
             </div>
@@ -40,23 +40,23 @@
     </div>
     <div class="col-12 col-md-7">
         <h2 class="featurette-heading">ELEKTROMOBIL ORION<sup>&reg;</sup></h2>
-        <p class="lead">Das Elektromobil Orion Pro ist ideal für größere Unternehmungen
-            und mit 6 km/h und 10 km/h erhältlich.</p>
+        <p class="lead">Das Elektromobil Orion Pro ist ideal f&uuml;r gr&ouml;&szlig;ere Unternehmungen
+            und mit 6 km/h und 10 km/h erh&auml;ltlich.</p>
         <p class="d-md-none">
             <button class="btn btn-link-red" data-toggle="collapse" data-target="#orion-content">Ausstattung <i class="fas fa-caret-down"> </i> </button>
             <button class="btn btn-link-red" data-toggle="collapse" data-target="#orion-technical">Technische Details <i class="fas fa-caret-down"> </i> </button>
         </p>
         <div class="d-none d-md-flex justify-content-start">
-            <p class="lead text-red"><strong>Serienmäßige Ausstattung:</strong></p>
+            <p class="lead text-red"><strong>Serienm&auml;&szlig;ige Ausstattung:</strong></p>
         </div>
         <div class="d-md-inline-block justify-content-start">
             <ul class="collapse" id="orion-content">
                 <li>Korb vorne</li>
-                <li>Rückspiegel links</li>
+                <li>R&uuml;ckspiegel links</li>
                 <li>Doppelscheinwerfer</li>
                 <li>Blinker</li>
                 <li>Polstersitz</li>
-                <li>Ladegerät</li>
+                <li>Ladeger&auml;t</li>
                 <li>Hupe</li>
                 <li>Bremshebel und -licht</li>
                 <li>Entriegelungshebel</li>
@@ -69,8 +69,8 @@
                 <li>Gewicht 110 kg</li>
                 <li>Sitzbreite 51 cm</li>
                 <li>Sitztiefe 47 cm</li>
-                <li>Sitzhöhe 44-51 cm</li>
-                <li>Rückenlehne 50 cm</li>
+                <li>Sitzh&ouml;he 44-51 cm</li>
+                <li>R&uuml;ckenlehne 50 cm</li>
                 <li>Wenderadius 260 cm</li>
             </ul>
         </div>
