--- a/templates/frontend/start/rollator.html.twig
+++ b/templates/frontend/start/rollator.html.twig
@@ -1,6 +1,6 @@
 <div class="container marketing py-4">
-    <h2 class="display-4">Mobilität zählt!</h2>
-    <p class="lead"><strong>Rollatoren</strong> gehören inzwischen zum Alltag. Sie sind nützliche Begleiter, wenn Gleichgewicht und Kraft beim Gehen nicht mehr so richtig mitmachen. Wir bieten mit unserer Rehasense-Serie hochwertige Begleiter für jede Gelegenheit!</p>
+    <h2 class="display-4">Mobilit&auml;t z&auml;hlt!</h2>
+    <p class="lead"><strong>Rollatoren</strong> geh&ouml;ren inzwischen zum Alltag. Sie sind n&uuml;tzliche Begleiter, wenn Gleichgewicht und Kraft beim Gehen nicht mehr so richtig mitmachen. Wir bieten mit unserer Rehasense-Serie hochwertige Begleiter f&uuml;r jede Gelegenheit!</p>
 </div>
 <div class="container marketing py-4">
     {% include 'frontend/start/server.rollator.html.twig' %}
