--- a/templates/frontend/start/rollstuhl.html.twig
+++ b/templates/frontend/start/rollstuhl.html.twig
@@ -1,5 +1,5 @@
 <div class="container marketing py-4">
-    <p class="lead"><strong>Aktiv-Rollstühle</strong> können heute wahre Leichtgewichte sein! Von der Verwendung daheim bis hin zur Städtetour ist vieles möglich. Aber ob Falt- oder Starrahmen: Das Gewicht ist nur ein Qualitätskriterium, das ein Plus in Sachen Alltagsmobilität bedeutet. Dazu kommen Schmutzempfindlichkeit von Lagern und Lenkradachsen, Rollwiderstand und Wendigkeit. Aber auch ein optimaler Greifpunkt, die richtige Radgröße und die Einstellung des Schwerpunktes sind Themen, die man am besten mit dem Experten bespricht. Das alles finden Sie bei uns!</p>
+    <p class="lead"><strong>Aktiv-Rollst&uuml;hle</strong> k&ouml;nnen heute wahre Leichtgewichte sein! Von der Verwendung daheim bis hin zur St&auml;dtetour ist vieles m&ouml;glich. Aber ob Falt- oder Starrahmen: Das Gewicht ist nur ein Qualit&auml;tskriterium, das ein Plus in Sachen Alltagsmobilit&auml;t bedeutet. Dazu kommen Schmutzempfindlichkeit von Lagern und Lenkradachsen, Rollwiderstand und Wendigkeit. Aber auch ein optimaler Greifpunkt, die richtige Radgr&ouml;&szlig;e und die Einstellung des Schwerpunktes sind Themen, die man am besten mit dem Experten bespricht. Das alles finden Sie bei uns!</p>
 </div>
 
 <div class="container marketing py-4">
