--- a/templates/frontend/start/router.rollator.html.twig
+++ b/templates/frontend/start/router.rollator.html.twig
@@ -8,7 +8,7 @@
     </div>
     <div class="d-none d-md-inline-flex col-md-7">
         <div class="sub-header">
-            <h4 class="text-uppercase p-3 info text-right bg-blue">Sehr leichter Alleskönner</h4>
+            <h4 class="text-uppercase p-3 info text-right bg-blue">Sehr leichter Allesk&ouml;nner</h4>
         </div>
     </div>
 </div>
@@ -25,7 +25,7 @@
     </div>
     <div class="col-12 col-md-7">
         <h2 class="featurette-heading">Rollator Router</h2>
-        <p class="lead">Das Leichtgewicht - in der Komfort- Variante mit Softrädern und Stockhalter ausgestattet.</p>
+        <p class="lead">Das Leichtgewicht - in der Komfort- Variante mit Softr&auml;dern und Stockhalter ausgestattet.</p>
         <p class="d-md-none">
             <button class="btn btn-link-red" data-toggle="collapse" data-target="#server-delivery">Lieferumfang <i class="fas fa-caret-down"></i> </button>
             <button class="btn btn-link-red" data-toggle="collapse" data-target="#server-technical">Technische Details <i class="fas fa-caret-down"></i> </button>
@@ -41,12 +41,12 @@
                 <li>Einkaufstasche</li>
                 <li>Soft-Reifen</li>
                 <li>Stockhalter</li>
-                <li>Rückengurt</li>
+                <li>R&uuml;ckengurt</li>
             </ul>
             <ul class="collapse d-md-inline-block" id="server-technical">
                 <li>Gewicht 6,6 - 6,8 kg</li>
                 <li>Max. Nutzlast 150 kg</li>
-                <li>Sitzhöhe 50 - 62 cm</li>
+                <li>Sitzh&ouml;he 50 - 62 cm</li>
                 <li>Sitzbreite 46 cm</li>
             </ul>
         </div>
