--- a/templates/frontend/start/scooter.html.twig
+++ b/templates/frontend/start/scooter.html.twig
@@ -1,5 +1,5 @@
 <div class="container marketing py-4">
-    <p class="lead"><strong>Elektromobile</strong> oder <strong>E-Scooter</strong> sind elektrisch angetriebene Mobilitätshilfen für Senioren und Menschen mit Handicap, die beispielsweise selbst kurze Wegestrecken wie Einkäufe oder Arztbesuche nicht mehr ohne Hilfe bewältigen können. Dabei reicht die Palette vom wendigen Flitzer für Haus und Hof bis zum Modell mit Straßenzulassung. Was zu wem passt - bei der Entscheidung hilft beispielsweise unsere Experten-Beratung!</p>
+    <p class="lead"><strong>Elektromobile</strong> oder <strong>E-Scooter</strong> sind elektrisch angetriebene Mobilit&auml;tshilfen f&uuml;r Senioren und Menschen mit Handicap, die beispielsweise selbst kurze Wegestrecken wie Eink&auml;ufe oder Arztbesuche nicht mehr ohne Hilfe bew&auml;ltigen k&ouml;nnen. Dabei reicht die Palette vom wendigen Flitzer f&uuml;r Haus und Hof bis zum Modell mit Stra&szlig;enzulassung. Was zu wem passt - bei der Entscheidung hilft beispielsweise unsere Experten-Beratung!</p>
 </div>
 <div class="container marketing py-4">
     {% include 'frontend/start/colibri.scooter.html.twig' %}
