--- a/templates/frontend/start/zenit.rollstuhl.html.twig
+++ b/templates/frontend/start/zenit.rollstuhl.html.twig
@@ -27,13 +27,13 @@
                 <ul>
                     <li>Sitzbreite 320 – 460 mm</li>
                     <li>Sitztiefe 360 – 500 mm</li>
-                    <li>Sitzhöhe vorn 380 – 540 mm</li>
-                    <li>Sitzhöhe hinten 370 – 500 mm</li>
-                    <li>Rückenhöhe 250 – 500 mm</li>
-                    <li>Unterschenkellänge 280 – 510 mm</li>
-                    <li>Gesamtlänge 720 – 1040 mm</li>
+                    <li>Sitzh&ouml;he vorn 380 – 540 mm</li>
+                    <li>Sitzh&ouml;he hinten 370 – 500 mm</li>
+                    <li>R&uuml;ckenh&ouml;he 250 – 500 mm</li>
+                    <li>Unterschenkell&auml;nge 280 – 510 mm</li>
+                    <li>Gesamtl&auml;nge 720 – 1040 mm</li>
                     <li>Gesamtbreite 490 – 725 mm</li>
-                    <li>Gesamthöhe 720 – 1040 mm</li>
+                    <li>Gesamth&ouml;he 720 – 1040 mm</li>
                     <li>Max. Zuladung 120 kg</li>
                     <li>Gewicht ab ca. 8,9 kg</li>
                     <li>Vorderrahmenwinkel 75° / 85°</li>
@@ -43,9 +43,9 @@
     </div>
     <div class="col-12 col-md-7">
         <h2 class="featurette-heading">Ottobock Zenit</h2>
-        <p class="lead">Zenit - ein Faltrollstuhl für (fast) alle Tage!  Dank des patentierten Easy-Go Faltsystems er sich einem sehr geringen Krafteinsatz auseinanderfalten.
-            Zusammen mit dem abklappbaren Rücken ist das eine unschlagbare Kombi, wenn es um ein optimales Packmaß geht.
-            Dabei beeindruckt der Zenit mit aufgeräumter, schnörkelloser Optik, absoluter Stabilität und dem soliden Fahrverhalten einen Starrrahmen-Rollstuhls.</p>
+        <p class="lead">Zenit - ein Faltrollstuhl f&uuml;r (fast) alle Tage!  Dank des patentierten Easy-Go Faltsystems er sich einem sehr geringen Krafteinsatz auseinanderfalten.
+            Zusammen mit dem abklappbaren R&uuml;cken ist das eine unschlagbare Kombi, wenn es um ein optimales Packma&szlig; geht.
+            Dabei beeindruckt der Zenit mit aufger&auml;umter, schn&ouml;rkelloser Optik, absoluter Stabilit&auml;t und dem soliden Fahrverhalten einen Starrrahmen-Rollstuhls.</p>
         <nav>
             <div class="nav nav-tabs" id="nav-tab" role="tablist">
                 <a class="nav-item nav-link active" id="nav-general-tab" data-toggle="tab" href="#nav-general-zenit" role="tab" aria-controls="nav-general-zenit" aria-selected="true" title="Hauptmerkmale"><i class="fas fa-home"></i> <span class="">Hauptmerkmale</span> </a>
@@ -57,22 +57,22 @@
             <div class="tab-pane fade show active" id="nav-general-zenit" role="tabpanel" aria-labelledby="nav-general-zenit-tab">
                 <ul class="py-4">
                     <li>Easy-Go Faltsystem</li>
-                    <li>Geschlossener Vorderrahmen mit integrierter Fußraste</li>
+                    <li>Geschlossener Vorderrahmen mit integrierter Fu&szlig;raste</li>
                     <li>Open-Frame-Bauweise mit Faltfunktion</li>
-                    <li>Kompakte Abmessungen und ein geringes Faltmaß</li>
+                    <li>Kompakte Abmessungen und ein geringes Faltma&szlig;</li>
                 </ul>
             </div>
             <div class="tab-pane fade" id="nav-options-zenit" role="tabpanel" aria-labelledby="nav-options-zenit-tab">
                 <ul class="py-4">
-                    <li>Fest verschweißte Antriebsradposition und auf Maß gebogene Rückenrohre</li>
+                    <li>Fest verschwei&szlig;te Antriebsradposition und auf Ma&szlig; gebogene R&uuml;ckenrohre</li>
                     <li>Rahmenrohr aus Carbon</li>
-                    <li>Verschiedene Rückenbespannungen</li>
+                    <li>Verschiedene R&uuml;ckenbespannungen</li>
                     <li>Verschiedene Schiebegriffe</li>
                     <li>Verschiedene Seitenteile</li>
                     <li>Verschiedene Antriebsradfelgen</li>
                     <li>Verschiedene Greifreifen</li>
                     <li>Scherenbremse</li>
-                    <li>Verschiedene Lenkräder / Lenkradgabeln</li>
+                    <li>Verschiedene Lenkr&auml;der / Lenkradgabeln</li>
                     <li>Kippschutz</li>
                     <li>Ankipphilfe</li>
                 </ul>
@@ -81,13 +81,13 @@
                 <ul class="py-4">
                     <li>Sitzbreite 320 – 460 mm</li>
                     <li>Sitztiefe 360 – 500 mm</li>
-                    <li>Sitzhöhe vorn 380 – 540 mm</li>
-                    <li>Sitzhöhe hinten 370 – 500 mm</li>
-                    <li>Rückenhöhe 250 – 500 mm</li>
-                    <li>Unterschenkellänge 280 – 510 mm</li>
-                    <li>Gesamtlänge 720 – 1040 mm</li>
+                    <li>Sitzh&ouml;he vorn 380 – 540 mm</li>
+                    <li>Sitzh&ouml;he hinten 370 – 500 mm</li>
+                    <li>R&uuml;ckenh&ouml;he 250 – 500 mm</li>
+                    <li>Unterschenkell&auml;nge 280 – 510 mm</li>
+                    <li>Gesamtl&auml;nge 720 – 1040 mm</li>
                     <li>Gesamtbreite 490 – 725 mm</li>
-                    <li>Gesamthöhe 720 – 1040 mm</li>
+                    <li>Gesamth&ouml;he 720 – 1040 mm</li>
                     <li>Max. Zuladung 120 kg</li>
                     <li>Gewicht ab ca. 8,9 kg</li>
                     <li>Vorderrahmenwinkel 75° / 85°</li>
