--- a/templates/frontend/start/zenit_r.rollstuhl.html.twig
+++ b/templates/frontend/start/zenit_r.rollstuhl.html.twig
@@ -27,41 +27,41 @@
                 <ul>
                     <li>Sitzbreite 	320 – 460 mm</li>
                     <li>Sitztiefe 	360 – 500 mm</li>
-                    <li>Sitzhöhe vorn 	380 – 540 mm</li>
-                    <li>Sitzhöhe hinten 	370 – 500 mm</li>
-                    <li>Rückenhöhe 	250 – 500 mm</li>
-                    <li>Unterschenkellänge 	280 – 510 mm</li>
+                    <li>Sitzh&ouml;he vorn 	380 – 540 mm</li>
+                    <li>Sitzh&ouml;he hinten 	370 – 500 mm</li>
+                    <li>R&uuml;ckenh&ouml;he 	250 – 500 mm</li>
+                    <li>Unterschenkell&auml;nge 	280 – 510 mm</li>
                     <li>Vorderrahmenwinkel 	75° / 85°</li>
                     <li>Gesamtbreite 	495 – 710 mm</li>
-                    <li>Gesamtlänge 	640 – 1.040 mm</li>
-                    <li>Gesamthöhe 	620 – 1.050 mm</li>
+                    <li>Gesamtl&auml;nge 	640 – 1.040 mm</li>
+                    <li>Gesamth&ouml;he 	620 – 1.050 mm</li>
                     <li>Max. Zuladung 	120 kg</li>
                     <li>Gewicht 	ab ca. 8,5 kg</li>
-                    <li>Transportgewicht (ohne Antriebsräder) 	ab ca. 6,0 kg</li>
+                    <li>Transportgewicht (ohne Antriebsr&auml;der) 	ab ca. 6,0 kg</li>
                 </ul>
             </div>
         </div>
     </div>
     <div class="col-12 col-md-7">
         <h2 class="featurette-heading">Ottobock Zenit R</h2>
-        <p class="lead">Kompromisslos, effizient, individuell – Zenit R! Gewichtsoptimierte Komponenten und verbesserte Starrrahmeneigenschaften setzen jeden deiner Kraftimpulse direkt in Bewegung um, was die Qualität des Fahrverhaltens enorm steigert. Zahlreiche Einstellmöglichkeiten erlauben zudem eine optimale Anpassung für noch mehr Komfort und machen den Zenit R zu einem Aktivrollstuhl ohne Kompromisse.</p>
+        <p class="lead">Kompromisslos, effizient, individuell – Zenit R! Gewichtsoptimierte Komponenten und verbesserte Starrrahmeneigenschaften setzen jeden deiner Kraftimpulse direkt in Bewegung um, was die Qualit&auml;t des Fahrverhaltens enorm steigert. Zahlreiche Einstellm&ouml;glichkeiten erlauben zudem eine optimale Anpassung f&uuml;r noch mehr Komfort und machen den Zenit R zu einem Aktivrollstuhl ohne Kompromisse.</p>
         <p class="d-md-none">
             <button class="btn btn-link-red" data-toggle="collapse" data-target="#zenit-r-technical">Technische Details <i class="fas fa-caret-down"></i> </button>
         </p>
         <ul class="collapse d-md-inline-block" id="zenit-r-technical">
             <li>Sitzbreite 	320 – 460 mm</li>
             <li>Sitztiefe 	360 – 500 mm</li>
-            <li>Sitzhöhe vorn 	380 – 540 mm</li>
-            <li>Sitzhöhe hinten 	370 – 500 mm</li>
-            <li>Rückenhöhe 	250 – 500 mm</li>
-            <li>Unterschenkellänge 	280 – 510 mm</li>
+            <li>Sitzh&ouml;he vorn 	380 – 540 mm</li>
+            <li>Sitzh&ouml;he hinten 	370 – 500 mm</li>
+            <li>R&uuml;ckenh&ouml;he 	250 – 500 mm</li>
+            <li>Unterschenkell&auml;nge 	280 – 510 mm</li>
             <li>Vorderrahmenwinkel 	75° / 85°</li>
             <li>Gesamtbreite 	495 – 710 mm</li>
-            <li>Gesamtlänge 	640 – 1.040 mm</li>
-            <li>Gesamthöhe 	620 – 1.050 mm</li>
+            <li>Gesamtl&auml;nge 	640 – 1.040 mm</li>
+            <li>Gesamth&ouml;he 	620 – 1.050 mm</li>
             <li>Max. Zuladung 	120 kg</li>
             <li>Gewicht 	ab ca. 8,5 kg</li>
-            <li>Transportgewicht (ohne Antriebsräder) 	ab ca. 6,0 kg</li>
+            <li>Transportgewicht (ohne Antriebsr&auml;der) 	ab ca. 6,0 kg</li>
         </ul>
     </div>
 </div>
