--- a/templates/frontend/imprint.html.twig
+++ b/templates/frontend/imprint.html.twig
@@ -4,7 +4,7 @@
     <div class="parallax-window" data-parallax="scroll" data-image-src="{{ asset('media/senioren_background_web.jpg') }}">
         <div class="parallax-content"></div>
     </div>
-    {# Start Content Intro Mobilität #}
+    {# Start Content Intro Mobilit&auml;t #}
     <div class="container marketing py-4">
         <h2 class="display-4">Impressum</h2>
         <div class="row">
