--- a/templates/frontend/start/server.rollator.html.twig
+++ b/templates/frontend/start/server.rollator.html.twig
@@ -25,7 +25,7 @@
     </div>
     <div class="col-12 col-md-7">
         <h2 class="featurette-heading">Rollator Server</h2>
-        <p class="lead">Der Server ist das Einstiegsmodell in die Rehasense-Serie. Er ist wendig, stabil und höhenverstellbar.<br><u>Praktisches Extra:</u> die abnehmbare Einkaufstasche.</p>
+        <p class="lead">Der Server ist das Einstiegsmodell in die Rehasense-Serie. Er ist wendig, stabil und h&ouml;henverstellbar.<br><u>Praktisches Extra:</u> die abnehmbare Einkaufstasche.</p>
         <p class="d-md-none">
             <button class="btn btn-link-red" data-toggle="collapse" data-target="#router-delivery">Lieferumfang <i class="fas fa-caret-down"></i> </button>
             <button class="btn btn-link-red" data-toggle="collapse" data-target="#router-technical">Technische Details <i class="fas fa-caret-down"></i> </button>
@@ -43,7 +43,7 @@
             <ul class="collapse d-md-inline-block" id="router-technical">
                 <li>Gewicht 6,7 - 7,0 kg</li>
                 <li>Max. Nutzlast 150 kg</li>
-                <li>Sitzhöhe 50 - 62 cm</li>
+                <li>Sitzh&ouml;he 50 - 62 cm</li>
                 <li>Sitzbreite 46 cm</li>
             </ul>
         </div>
